--- a/platform/app/package.json
+++ b/platform/app/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^2.9.3",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "quasar": "^2.0.0",
     "serve-static": "^1.14.2",
