--- a/platform/app/package.json
+++ b/platform/app/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "http": "^0.0.1-security",
     "quasar": "^2.0.0",
     "serve-static": "^1.14.2",
     "vue-chartjs": "^3.5.0",
